--- a/public/display.html
+++ b/public/display.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.14</title>
+  <title>Laserpointer Display v3.15</title>
   <style>
-    body { margin:0; background:black; }
-    canvas { display:block; margin:auto; background:black; }
+    body { margin:0; background:black }
+    canvas { display:block; margin:auto; background:black }
     #version {
       position:absolute; top:10px; left:10px;
       color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
@@ -14,154 +14,176 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.14 (smooth dynamic)</div>
+  <div id="version">v3.15 (bezier + dynamic width)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     socket.emit("identify", { role: "display", deviceId: null });
 
-    const c    = document.getElementById("canvas"),
-          ctx  = c.getContext("2d"),
-          CX   = c.width/2,
-          CY   = c.height/2;
+    const c   = document.getElementById("canvas"),
+          ctx = c.getContext("2d"),
+          CX  = c.width/2, CY = c.height/2;
 
-    // Admin-overrides
-    let MAX_H   = 20,
-        MAX_V   = 20,
-        SMOOTH  = 0.15;
-
+    // Admin-Settings
+    let MAX_H=20, MAX_V=20, SMOOTH=0.15;
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
-      if (typeof maxH   === "number") MAX_H  = maxH;
-      if (typeof maxV   === "number") MAX_V  = maxV;
-      if (typeof smooth === "number") SMOOTH = smooth;
+      if (typeof maxH==="number") MAX_H=maxH;
+      if (typeof maxV==="number") MAX_V=maxV;
+      if (typeof smooth==="number") SMOOTH=smooth;
     });
 
-    // State per device
+    // State pro Gerät
     const alpha0    = {},
           beta0     = {},
           rawPos    = {},
+          smoothPos = {},
+          prevPos   = {},  // vorherige glatte Pos
+          prev2Pos  = {},  // zweite vorherige (für Bézier)
           lastTime  = {},
-          segments  = [],
           lastCol   = {},
           lastLight = {};
 
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
+    const segments = []; // {p0,p1,p2,color,width}
 
-    function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
-      return m ? +m[1] : 50;
+    ctx.lineCap="round";
+    ctx.lineJoin="round";
+
+    function parseLight(hsl){
+      const m=hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
+      return m?+m[1]:50;
     }
 
-    socket.on("clear", () => {
-      segments.length = 0;
+    socket.on("clear",()=>{
+      segments.length=0;
       ctx.clearRect(0,0,c.width,c.height);
       Object.keys(alpha0).forEach(k=>delete alpha0[k]);
       Object.keys(beta0).forEach(k=>delete beta0[k]);
       Object.keys(rawPos).forEach(k=>delete rawPos[k]);
+      Object.keys(smoothPos).forEach(k=>delete smoothPos[k]);
+      Object.keys(prevPos).forEach(k=>delete prevPos[k]);
+      Object.keys(prev2Pos).forEach(k=>delete prev2Pos[k]);
       Object.keys(lastTime).forEach(k=>delete lastTime[k]);
       Object.keys(lastCol).forEach(k=>delete lastCol[k]);
       Object.keys(lastLight).forEach(k=>delete lastLight[k]);
     });
 
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number") return;
-      const now = performance.now();
+    socket.on("motion",({alpha,beta,color,isDrawing,deviceId})=>{
+      if(!deviceId||typeof alpha!=="number")return;
+      const now=performance.now();
 
-      // Farbe & Helligkeit
-      lastCol[deviceId]   = color;
-      lastLight[deviceId] = parseLight(color);
+      // Farbe/Helligkeit
+      lastCol[deviceId]=color;
+      lastLight[deviceId]=parseLight(color);
 
       // Kalibrierung
-      if (isDrawing && !(deviceId in alpha0)) {
-        alpha0[deviceId] = alpha;
-        beta0 [deviceId] = beta;
-        rawPos[deviceId] = { x: CX, y: CY };
-        lastTime[deviceId] = now;
+      if(isDrawing && !(deviceId in alpha0)){
+        alpha0[deviceId]=alpha;
+        beta0 [deviceId]=beta;
+        rawPos[deviceId]={x:CX,y:CY};
+        smoothPos[deviceId]={x:CX,y:CY};
+        prevPos[deviceId]={x:CX,y:CY};
+        prev2Pos[deviceId]={x:CX,y:CY};
+        lastTime[deviceId]=now;
         return;
       }
-      if (!(deviceId in alpha0)) return;
+      if(!(deviceId in alpha0))return;
 
-      // Winkel delta + wrap
-      let dA = alpha - alpha0[deviceId];
-      if (dA>180)  dA-=360;
-      if (dA<-180) dA+=360;
-      let dB = beta - beta0[deviceId];
+      // Winkel-Delta + Wrap
+      let dA=alpha-alpha0[deviceId];
+      if(dA>180)dA-=360;
+      if(dA<-180)dA+=360;
+      let dB=beta-beta0[deviceId];
 
-      // clamp
-      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
-      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
+      // Clamp
+      dA=Math.max(-MAX_H,Math.min(MAX_H,dA));
+      dB=Math.max(-MAX_V,Math.min(MAX_V,dB));
 
-      // map to canvas
-      const x = CX - (dA/MAX_H)*CX;
-      const y = CY - (dB/MAX_V)*CY;
+      // Map roh
+      const rawX=CX-(dA/MAX_H)*CX,
+            rawY=CY-(dB/MAX_V)*CY;
 
-      // speed calculation (px/sec)
-      const prev = rawPos[deviceId];
-      const dx   = x - prev.x;
-      const dy   = y - prev.y;
-      const dt   = (now - lastTime[deviceId]) / 1000; // in Sekunden
-      const speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
+      // Smooth
+      const s=smoothPos[deviceId];
+      s.x+=(rawX-s.x)*SMOOTH;
+      s.y+=(rawY-s.y)*SMOOTH;
 
-      // speichern für next
-      rawPos[deviceId]  = { x, y };
-      lastTime[deviceId] = now;
+      // Geschwindigkeit px/s
+      const prevR=rawPos[deviceId];
+      const dt=(now-lastTime[deviceId])/1000;
+      const speed=dt>0?Math.hypot(s.x-prevR.x,s.y-prevR.y)/dt:0;
+      lastTime[deviceId]=now;
 
-      if (isDrawing) {
-        // Geschwindigkeit → norm [0..1] (0: langsam, 2000px/s oder mehr → schnell)
-        const threshold = 2000; 
-        const norm = Math.min(1, speed/threshold);
-        const maxW = 12, minW = 2;
-        const w = maxW - (maxW-minW)*norm;
+      // Neues Segment (Bézier) nur beim Zeichnen
+      if(isDrawing){
+        // Normierte Geschwindigkeit [0..1]
+        const norm=Math.min(1,speed/2000);
+        const maxW=12,minW=2;
+        const w=maxW-(maxW-minW)*norm;
 
-        segments.push({ x1: prev.x, y1: prev.y, x2: x, y2: y, color, width: w });
+        const p2={x:s.x,y:s.y},
+              p1=prevPos[deviceId],
+              p0=prev2Pos[deviceId];
+
+        // Erst ab drei Punkten Bézier
+        if(prev2Pos[deviceId]){
+          segments.push({p0,p1,p2,color,lastW:w});
+        }
+
+        // Shift history
+        prev2Pos[deviceId]=prevPos[deviceId];
+        prevPos[deviceId]={x:s.x,y:s.y};
       }
+
+      rawPos[deviceId]={x:rawX,y:rawY};
     });
 
-    let pulse=0, growing=true;
-    function render() {
+    // Render Loop
+    let pulse=0,grow=true;
+    (function render(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // draw all segments
-      for (const s of segments) {
-        ctx.strokeStyle = s.color;
-        ctx.lineWidth   = s.width;
+      // Zeichne alle Bézier-Segmente
+      for(const sgt of segments){
+        ctx.strokeStyle=sgt.color;
+        ctx.lineWidth=sgt.lastW;
         ctx.beginPath();
-        ctx.moveTo(s.x1, s.y1);
-        ctx.lineTo(s.x2, s.y2);
+        ctx.moveTo(sgt.p0.x,sgt.p0.y);
+        ctx.quadraticCurveTo(sgt.p1.x,sgt.p1.y,sgt.p2.x,sgt.p2.y);
         ctx.stroke();
       }
 
-      // pulsating dots
-      pulse += growing?0.2:-0.2;
-      if (pulse>2) growing=false;
-      if (pulse<0) growing=true;
+      // Pulsation
+      pulse+=grow?0.2:-0.2;
+      if(pulse>2)grow=false;
+      if(pulse<0)grow=true;
 
-      for (const id in rawPos) {
-        const { x,y } = rawPos[id];
-        const col     = lastCol[id] || "#fff";
-        // derive current w based on last segment widths? fallback:
-        const wLast = segments.filter(s=>s.color===col).slice(-1)[0]?.width || 6;
-        const r = wLast/2 + pulse;
+      // Pulsierende Punkte
+      for(const id in smoothPos){
+        const {x,y}=smoothPos[id],
+              col=lastCol[id]||"#f00",
+              light=lastLight[id]||50,
+              // Punktgröße aus letztem Segment
+              lastSeg=segments.filter(s=>s.color===col).slice(-1)[0],
+              baseW=lastSeg?lastSeg.lastW:6,
+              r=baseW/2 + pulse;
 
         ctx.beginPath();
         ctx.arc(x,y,r,0,2*Math.PI);
-        ctx.fillStyle = col;
+        ctx.fillStyle=col;
         ctx.fill();
 
-        if ((lastLight[id]||50) < 20) {
+        if(light<20){
           ctx.beginPath();
           ctx.arc(x,y,r+3,0,2*Math.PI);
-          ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 3;
+          ctx.strokeStyle="#fff";
+          ctx.lineWidth=3;
           ctx.stroke();
         }
       }
 
       requestAnimationFrame(render);
-    }
-    render();
+    })();
   </script>
 </body>
 </html>
