--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.14</title>
+  <title>Laserpointer Display v3.15</title>
   <style>
     body { margin:0; background:black }
     canvas { display:block; margin:auto; background:black }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.14 (smooth dynamic)</div>
+  <div id="version">v3.15 (thickness 10–20px)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -23,7 +23,8 @@
 
     const c   = document.getElementById("canvas"),
           ctx = c.getContext("2d"),
-          CX  = c.width/2, CY = c.height/2;
+          CX  = c.width/2,
+          CY  = c.height/2;
 
     // Admin-Overrides
     let MAX_H=20, MAX_V=20, SMOOTH=0.15;
@@ -33,88 +34,89 @@
       if(typeof smooth==="number") SMOOTH=smooth;
     });
 
-    // State per device
-    const alpha0     = {},
-          beta0      = {},
-          smoothPos  = {},    // geglättete Position
-          lastTime   = {},
-          lastCol    = {},
-          lastLight  = {},
-          devicePts  = {};    // deviceId → [{x,y,w,color},...]
+    // per-device state
+    const alpha0    = {},
+          beta0     = {},
+          rawPos    = {},
+          smoothPos = {},
+          lastTime  = {},
+          lastCol   = {},
+          lastLight = {},
+          devicePts = {}; // deviceId → [ {x,y,w,color}, ... ]
 
-    // Hilfe: Lightness parsen
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
+
     function parseLight(hsl){
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
-      return m?+m[1]:50;
+      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
+      return m ? +m[1] : 50;
     }
 
-    // Beim Clear alle Daten leeren
     socket.on("clear",()=>{
       ctx.clearRect(0,0,c.width,c.height);
-      for(let k in alpha0)    delete alpha0[k];
-      for(let k in beta0)     delete beta0[k];
-      for(let k in smoothPos) delete smoothPos[k];
-      for(let k in lastTime)  delete lastTime[k];
-      for(let k in lastCol)   delete lastCol[k];
-      for(let k in lastLight) delete lastLight[k];
-      for(let k in devicePts) delete devicePts[k];
+      Object.keys(alpha0).forEach(k=>delete alpha0[k]);
+      Object.keys(beta0).forEach(k=>delete beta0[k]);
+      Object.keys(rawPos).forEach(k=>delete rawPos[k]);
+      Object.keys(smoothPos).forEach(k=>delete smoothPos[k]);
+      Object.keys(lastTime).forEach(k=>delete lastTime[k]);
+      Object.keys(lastCol).forEach(k=>delete lastCol[k]);
+      Object.keys(lastLight).forEach(k=>delete lastLight[k]);
+      Object.keys(devicePts).forEach(k=>delete devicePts[k]);
     });
 
-    // Haupt-Handler
     socket.on("motion",({alpha,beta,color,isDrawing,deviceId})=>{
-      if(!deviceId||typeof alpha!=="number") return;
+      if(!deviceId||typeof alpha!=="number")return;
       const now = performance.now();
 
-      // 1) speichern
+      // Farbe + Helligkeit speichern
       lastCol[deviceId]   = color;
       lastLight[deviceId] = parseLight(color);
 
-      // 2) kalibrieren beim ersten Draw
+      // Kalibrierung beim ersten Draw
       if(isDrawing && !(deviceId in alpha0)){
         alpha0[deviceId]    = alpha;
         beta0 [deviceId]    = beta;
+        rawPos[deviceId]    = { x:CX, y:CY };
         smoothPos[deviceId] = { x:CX, y:CY };
-        lastTime [deviceId] = now;
+        lastTime[deviceId]  = now;
         devicePts[deviceId] = [];
         return;
       }
       if(!(deviceId in alpha0)) return;
 
-      // 3) Winkel-Delta + Wrap
+      // Winkel-Delta + Wrap
       let dA = alpha - alpha0[deviceId];
-      if(dA>180)  dA-=360;
-      if(dA<-180) dA+=360;
+      if(dA > 180)  dA -= 360;
+      if(dA < -180) dA += 360;
       let dB = beta - beta0[deviceId];
 
-      // 4) clamp
-      dA = Math.max(-MAX_H,Math.min(MAX_H,dA));
-      dB = Math.max(-MAX_V,Math.min(MAX_V,dB));
+      // Clamp
+      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
+      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // 5) auf Canvas map
+      // Map auf Canvas
       const rawX = CX - (dA/MAX_H)*CX;
       const rawY = CY - (dB/MAX_V)*CY;
 
-      // 6) glätten
+      // Glätten
       const sp = smoothPos[deviceId];
       sp.x += (rawX - sp.x)*SMOOTH;
       sp.y += (rawY - sp.y)*SMOOTH;
 
-      // 7) Geschwindigkeit (px/s)
-      const prev = smoothPos[deviceId],
-            dt   = (now - lastTime[deviceId]) / 1000,
-            dx   = sp.x - prev.x,
-            dy   = sp.y - prev.y,
-            speed= dt>0 ? Math.hypot(dx,dy)/dt : 0;
+      // Geschwindigkeit (px/s)
+      const prev = smoothPos[deviceId];
+      const dt   = (now - lastTime[deviceId]) / 1000;
+      const dx   = sp.x - prev.x, dy = sp.y - prev.y;
+      const speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
       lastTime[deviceId] = now;
 
       if(isDrawing){
-        // 8) speed → width [2..12]
-        const threshold = 2000; // px/s für minimal width
+        // dynamische Breite zwischen 10 und 20px
+        const minW = 10, maxW = 20;
+        const threshold = 2000;            // px/s → max schnell
         const norm = Math.min(1, speed/threshold);
-        const maxW = 12, minW = 2;
-        const w = maxW - (maxW-minW)*norm;
+        const w = maxW - (maxW - minW)*norm;
 
-        // 9) Punkt mit width pushen
         devicePts[deviceId].push({
           x: sp.x,
           y: sp.y,
@@ -122,23 +124,23 @@
           color
         });
       }
+
+      rawPos[deviceId] = { x: rawX, y: rawY };
     });
 
     // Render-Loop
-    let pulse=0, grow=true;
-    function render(){
+    let pulse = 0, growing = true;
+    (function render(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // Linien per Device zeichnen
+      // für jedes Gerät: alle Linienabschnitte zeichnen
       for(const id in devicePts){
         const pts = devicePts[id];
-        if(pts.length<2) continue;
-        ctx.strokeStyle = pts[0].color; // Farbe bleibt gleich pro Stroke
-        for(let i=1;i<pts.length;i++){
-          const p0 = pts[i-1],
-                p1 = pts[i],
-                w  = (p0.w + p1.w)/2;
-          ctx.lineWidth = w;
+        if(pts.length < 2) continue;
+        ctx.strokeStyle = pts[0].color;
+        for(let i = 1; i < pts.length; i++){
+          const p0 = pts[i-1], p1 = pts[i];
+          ctx.lineWidth = (p0.w + p1.w)/2;
           ctx.beginPath();
           ctx.moveTo(p0.x,p0.y);
           ctx.lineTo(p1.x,p1.y);
@@ -146,32 +148,32 @@
         }
       }
 
-      // Puls
-      pulse += grow?0.2:-0.2;
-      if(pulse>2) grow=false;
-      if(pulse<0) grow=true;
+      // Puls für Punkt
+      pulse += growing ? 0.2 : -0.2;
+      if(pulse > 2)  growing = false;
+      if(pulse < 0)  growing = true;
 
-      // Punkte pulsen
+      // pulsierende Punkte
       for(const id in smoothPos){
-        const {x,y}=smoothPos[id];
-        const pts = devicePts[id]||[];
-        const lastW = pts.length?pts[pts.length-1].w:6;
+        const { x, y } = smoothPos[id];
+        const pts = devicePts[id] || [];
+        const lastW = pts.length ? pts[pts.length-1].w : 15;
         const r = lastW/2 + pulse;
-        const col = lastCol[id]||"#fff";
         ctx.beginPath();
         ctx.arc(x,y,r,0,2*Math.PI);
-        ctx.fillStyle = col;
+        ctx.fillStyle = lastCol[id] || "#fff";
         ctx.fill();
-        if((lastLight[id]||50)<20){
+        if((lastLight[id]||50) < 20){
           ctx.beginPath();
           ctx.arc(x,y,r+3,0,2*Math.PI);
-          ctx.strokeStyle="#fff"; ctx.lineWidth=3; ctx.stroke();
+          ctx.strokeStyle = "#fff";
+          ctx.lineWidth   = 3;
+          ctx.stroke();
         }
       }
 
       requestAnimationFrame(render);
-    }
-    render();
+    })();
   </script>
 </body>
 </html>
